consider it done

--- a/src/app/admin/department/views/form.html
+++ b/src/app/admin/department/views/form.html
@@ -94,8 +94,4 @@
 	   	</div>
 	</div>
 
-{{ vm.input.university_id }}
-
-<pre ng-if="admin.debug">
-{{ vm.input | json }}
-</pre>
+<json-formatter ng-if="$root.APP_DEBUG" json="vm.input" open="1"></json-formatter>
