--- a/src/app/admin/dashboard/views/dashboard.html
+++ b/src/app/admin/dashboard/views/dashboard.html
@@ -12,8 +12,9 @@
         <div class="panel panel-default">
             <div class="panel-heading">Line Chart</div>
             <div class="panel-body">
-                <canvas id="line" class="chart chart-line chart-xl" data="admin.line.data" labels="admin.line.labels" legend="true"
-                click="line.onClick" series="admin.line.series"></canvas>
+                <canvas id="line" class="chart chart-line chart-xl" chart-data="admin.line.data" 
+                    chart-labels="admin.line.labels" chart-legend="true"
+                    click="line.onClick" chart-series="admin.line.series"></canvas>
             </div>
         </div>
     </div>
