--- a/src/app/admin/form/views/modal.html
+++ b/src/app/admin/form/views/modal.html
@@ -148,9 +148,8 @@
 	                	</div>
 	                </div>
 	                
-                    <pre ng-if="admin.debug">
-                        {{ vm.input | json}}
-                    </pre>
+                    <json-formatter ng-if="$root.APP_DEBUG" json="vm.input" open="1"></json-formatter>
+
 	            </div>
 
 	            <div class="modal-footer clearfix">
