--- a/src/app/admin/groupJob/views/form.html
+++ b/src/app/admin/groupJob/views/form.html
@@ -141,6 +141,4 @@
 		   	</div>
 	</div>
 
-<pre ng-if="admin.debug">
-	{{ vm.input | json }}
-</pre>
+<json-formatter ng-if="$root.APP_DEBUG" json="vm.input" open="1"></json-formatter>
