--- a/src/app/admin/guide/views/form.html
+++ b/src/app/admin/guide/views/form.html
@@ -186,6 +186,4 @@
 	   	</div>
 	</div>
 
-<pre ng-if="debug">
-	{{ input }}
-</pre>
+<json-formatter ng-if="$root.APP_DEBUG" json="vm.input" open="1"></json-formatter>
