--- a/src/app/admin/university/views/form.html
+++ b/src/app/admin/university/views/form.html
@@ -108,6 +108,5 @@
 	   	</div>
 	</div>
 
-<pre ng-if="debug">
-{{ input | json }}
-</pre>
+
+<json-formatter ng-if="$root.APP_DEBUG" json="vm.input" open="1"></json-formatter>
