--- a/src/app/admin/university/views/list.html
+++ b/src/app/admin/university/views/list.html
@@ -59,6 +59,5 @@
    	</div>
 	</div>
 
-<pre ng-if="admin.debug">
-{{ universities | json }}
-</pre>
+
+<json-formatter ng-if="$root.APP_DEBUG" json="vm.universities" open="1"></json-formatter>
