--- a/src/app/admin/user/views/modal.html
+++ b/src/app/admin/user/views/modal.html
@@ -42,8 +42,7 @@
 			            </tr>
 			        </tbody>
 			    </table>
-			    <strong>{{ vm.selected }}</strong><span class="pull-right" ng-if="vm.useInherit"><input type="checkbox" ng-model="vm.inherit">&nbsp; Inherit delegation to its children?</span>
-                {{ vm.inherit }}
+			    <strong>{{ vm.selected }}</strong>
 			</div>
     	</div>
     </div>
